Added level and stats pages. All with session tracking between activities through intent.

--- a/app/src/main/res/layout/activity_make_character_class.xml
+++ b/app/src/main/res/layout/activity_make_character_class.xml
@@ -8,7 +8,7 @@
     tools:context=".MakeCharacterClass">
 
     <Button
-        android:id="@+id/buttonToMakeStats"
+        android:id="@+id/buttonToMakeLevel"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
