--- a/app/src/main/res/layout/activity_make_character_stats.xml
+++ b/app/src/main/res/layout/activity_make_character_stats.xml
@@ -8,7 +8,7 @@
     tools:context=".MakeCharacterStats">
 
     <Button
-        android:id="@+id/buttonToMakeEquipment"
+        android:id="@+id/buttonToMakeSkills"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
