--- a/app/src/main/res/layout/activity_make_character1.xml
+++ b/app/src/main/res/layout/activity_make_character1.xml
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.499" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewAcr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="176dp"
@@ -58,6 +58,6 @@
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewAcr" />
 
 </android.support.constraint.ConstraintLayout>
