--- a/app/src/main/res/layout/activity_make_character_stats.xml
+++ b/app/src/main/res/layout/activity_make_character_stats.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewStatsTitle" />
 
     <TextView
-        android:id="@+id/textViewInt"
+        android:id="@+id/textViewIntel"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -124,7 +124,7 @@
         android:text="10"
         android:textSize="30sp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewInt" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewIntel" />
 
     <EditText
         android:id="@+id/textViewChaScore"
@@ -160,7 +160,7 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textViewIntScore"
-        app:layout_constraintTop_toBottomOf="@+id/textViewInt" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewIntel" />
 
     <Button
         android:id="@+id/buttonChaPlus"
@@ -197,7 +197,7 @@
         android:text="10"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewStr" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewInit" />
 
     <EditText
         android:id="@+id/textViewConScore"
@@ -228,7 +228,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewWis" />
 
     <TextView
-        android:id="@+id/textViewStr"
+        android:id="@+id/textViewInit"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="120dp"
@@ -272,7 +272,7 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/textViewStrScore"
-        app:layout_constraintTop_toBottomOf="@+id/textViewStr" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewInit" />
 
     <Button
         android:id="@+id/buttonConPlus"
